# cognifli

./: .gitignore  .travis.yml
src/cognifli_simulator/cognifli_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_control/: CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_control/include/cognifli_control/: attitude_controller.h  attitude_controller_samy.h  common.h  lee_position_controller.h  motor_controller.h  parameters.h  parameters_ros.h  rate_controller.h  roll_pitch_yawrate_thrust_controller.h
src/cognifli_simulator/cognifli_control/src/: attitude_controller.cpp  attitude_controller_samy.cpp  motor_controller.cpp  rate_controller.cpp
src/cognifli_simulator/cognifli_control/src/nodes/: lee_position_controller_node.cpp  lee_position_controller_node.h  roll_pitch_yawrate_thrust_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.h
src/cognifli_simulator/cognifli_description/cognifli_drone/urdf/: cognifli_drone.urdf.xacro  cognifli_mechanics.xacro  multirotor_base.xacro
src/cognifli_simulator/cognifli_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cognifli_simulator/cognifli_gazebo_plugins/include/cognifli_gazebo_plugins/: gazebo_bag_plugin.h  gazebo_controller_interface.h  gazebo_gps_plugin.h  (+9 more)
src/cognifli_simulator/cognifli_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_controller_interface.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_wind_plugin.cpp
